# talking-airplane

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: main.rs
talking-airplane/: Cargo.toml
talking-airplane/src/: main.rs  moving_average.rs  voice_box.rs
