[package]
name = "talking-airplane"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msfs = "0.1.0"
clap = "3.0.0-beta.4"

[dependencies.windows]
version = "0.28.0"
features = [
    "Media_SpeechSynthesis",
    "Media_Core",
    "Media_Playback",
    "Foundation",
    "Storage_Streams",
    "alloc",
]